--- a/src/main/java/com/mycompany/puntodeventaurizen/Inicio.form
+++ b/src/main/java/com/mycompany/puntodeventaurizen/Inicio.form
@@ -61,11 +61,6 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JLabel" name="lblLogo">
-          <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\marti\Downloads\otromediano.png"/>
-            </Property>
-          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="170" y="70" width="-1" height="-1"/>
@@ -88,7 +83,7 @@
         <Component class="javax.swing.JButton" name="btnIniciar">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\UrizenMetalShop\Iniciar3.png"/>
+              <Image iconType="3" name="/com/mycompany/IMG/Iniciar3.png"/>
             </Property>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
@@ -108,7 +103,7 @@
         <Component class="javax.swing.JButton" name="btnSalirPrograma">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\UrizenMetalShop\salirchico.png"/>
+              <Image iconType="3" name="/com/mycompany/IMG/salirchico.png"/>
             </Property>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
